# ERASuffixTree

./: CMakeLists.txt  SuffixTree.hpp  main.cpp
config/: SuffixTreeGlobalConfig.hpp
dataSources/: BaseDataSource.cpp  BaseDataSource.hpp  DataSource.hpp  DataSourcePtr.hpp  StringDataSource.cpp  StringDataSource.hpp
interface/: BaseSuffixTree.cpp  BaseSuffixTree.hpp  BaseSuffixTreeInfo.cpp  BaseSuffixTreeInfo.hpp  SuffixTree.hpp  SuffixTreeBuilder.cpp  SuffixTreeBuilder.hpp  SuffixTreeChecker.cpp  SuffixTreeChecker.hpp  SuffixTreeConfig.hpp  SuffixTreeConfigPtr.hpp  SuffixTreeException.hpp  SuffixTreeInfo.hpp  SuffixTreeInfoPtr.hpp  SuffixTreePtr.hpp
prefixes/: Prefix.cpp  Prefix.hpp  PrefixCalc.cpp  PrefixCalc.hpp  PrefixPtr.hpp  PrefixUtils.cpp  PrefixUtils.hpp  UsedValues.cpp  UsedValues.hpp
prepare/: Bvalue.cpp  Bvalue.hpp  SubTreePrepare.cpp  SubTreePrepare.hpp  SubTreePrepareResult.hpp  VirtualSubTreePrepare.cpp  VirtualSubTreePrepare.hpp
tree/: DefaultTree.hpp  EdgesSort.cpp  EdgesSort.hpp  SubValue.cpp  SubValue.hpp  SubValuePath.cpp  SubValuePath.hpp  Tree.cpp  Tree.hpp  TreeEdge.cpp  TreeEdge.hpp  TreeEdgeAccessor.cpp  TreeEdgeAccessor.hpp  TreeMerger.cpp  TreeMerger.hpp  TreeMixer.cpp  TreeMixer.hpp  TreeNode.cpp  TreeNode.hpp  TreeNodeAccessor.cpp  TreeNodeAccessor.hpp  TreeNodeProcessor.cpp  TreeNodeProcessor.hpp  TreePath.hpp  TreePathSnapshot.cpp  TreePathSnapshot.hpp  TreePtr.hpp  TreeRepository.hpp  TreeSorter.cpp  TreeSorter.hpp
utils/: ArrayOrdering.cpp  ArrayOrdering.hpp  ArrayPrinter.hpp  ArrayUtils.hpp  Combinations.hpp  EmptyType.hpp  (+19 more)
(+34 files in other folders)
